--- a/config
+++ b/config
@@ -19,3 +19,11 @@ public class SwaggerConfig {
                 .build();
     }
 }
+
+<dependencies>
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-boot-starter</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+</dependencies>
